--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
    </head> 
 <body>
 <h1>SanJ</h1>
-   <style>
-<background:orange>
+   <style>{
+      background-color:brown;
 </style>
     </body>
 </html>
