--- a/index.html
+++ b/index.html
@@ -3,10 +3,7 @@
    <head>
 
    </head> 
-<body>
+<body bgcolor="orange">
 <h1>Sanjay</h1>
-   <style>
-      background-color:brown;
-</style>
     </body>
 </html>
