--- a/index.html
+++ b/index.html
@@ -2,8 +2,12 @@
 <html>
    <head>
 <title>Sanjay</title>
+<link rel="stylesheet" type="text/css" href="css/style.css">
    </head> 
 <body bgcolor="orange">
 <h1>Sanjay</h1>
+<div class="container">
+
+</div>
     </body>
 </html>
