--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>Sanjay</title>
 <link rel="stylesheet" type="text/css" href="css/style.css">
    </head> 
-<body bgcolor="orange">
+<body>
 <h1>Sanjay</h1>
 <div class="container">
 
