--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <title>SanJ</title>
    </head> 
 <body bgcolor="orange">
+<img src="pic_trulli.jpg" alt="Italian Trulli">
 <h1>Sanjay</h1>
     </body>
 </html>
