--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>SanJ</title>
    </head> 
 <body bgcolor="orange">
-<img src="pic_trulli.jpg" alt="Italian Trulli plaatje">
+<img src="dumbell.jpeg" alt="dumbell"
 <h1>Sanjay</h1>
     </body>
 </html>
