--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>SanJ</title>
    </head> 
 <body bgcolor="orange">
-<img src="dumbell.jpeg" alt="dumbell"
+<img src="dumbell.jpeg" alt="dumbell">
 <h1>Sanjay</h1>
 <h1>1.0</h1>   
 </body>
