--- a/page2.html
+++ b/page2.html
@@ -5,6 +5,6 @@
     <title>page2</title>
 </head>
 <body>
-    <a href="page2.html">Page2</a>
+    <a href="sanj071.github.io.html">Page2</a>
 </body>
 </html>
