--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <title>SanJ</title>
    </head> 
 <body bgcolor="orange">
-<img src="dumbell.jpeg" alt="dumbell">
+<img src="dumbell.jpg" alt="dumbell">
 <h1>Sanjay</h1>
-<h1>2.0</h1>   
+<h1>2.1</h1>   
 <a href="page2.html">Page2</a>
 </body>
 </html>
