--- a/page2.html
+++ b/page2.html
@@ -5,6 +5,6 @@
     <title>page2</title>
 </head>
 <body>
-    <a href="sanj071.github.io.html">Page1</a>
+    <a href="https://sanj071.github.io/">Page1</a>
 </body>
 </html>
