--- a/page2.html
+++ b/page2.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>page2</title>
+    <title>Sanjay</title>
 </head>
 <body>
     <a href="https://sanj071.github.io">Page1</a>
