--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>SanJ</title>
    </head> 
 <body bgcolor="orange">
-<img src="Dumbell.jpg" alt="dumbell">
+<img src="Dumbell.jpg" alt="Dumbell">
 <h1>Sanjay</h1>
 <h1>2.7</h1>   
 <a href="page2.html">Page2</a>
