--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
    <head>
 <title>SanJ</title>
+<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
    </head> 
 <body bgcolor="orange">
 <img src="Dumbell.jpg" alt="Dumbell">
