--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
    <head>
 <title>SanJ</title>
-<link rel="icon" type="image/x-icon" href="/images/favicon.ico">
    </head> 
 <body bgcolor="orange">
 <img src="Dumbell.jpg" alt="Dumbell">
 <h1>Sanjay</h1>
-<h1>2.9</h1>   
+<marque> Dit is versie 3.0</marque>
+<marquee direction="right" behaviour="scroll"></marquee>
+<h1>3.0</h1>   
 <a href="page2.html">Page2</a>
 </body>
 </html>
