--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <title>SanJ</title>
    </head> 
 <body bgcolor="orange">
-<marquee> Dit is versie 3.1</marquee>
+<marquee> Dit is versie 3.2 dit is cool</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
-<img src="Dumbell.jpg" alt="Dumbell">
 <h1>Sanjay</h1>
+<img src="Dumbell.jpg" alt="Dumbell">
 <a href="page2.html">Page2</a>
 </body>
 </html>
