--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <marquee> Dit is versie 3.2 dit is cool</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <h1>Sanjay</h1>
-<img src="Dumbell.jpg" alt="Dumbell">
+<img src="Dumbell.jpg" alt="Dumbell" style="width:500px;height:600px;">
 <a href="page2.html">Page2</a>
 </body>
 </html>
