--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <title>SanJ</title>
    </head> 
 <body bgcolor="orange">
-<marquee> Dit is versie 3.5 dit is cool</marquee>
+<marquee> Dit is versie 3.6 dit is cool</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
-<h1 align="center">Sanjay</h1>
+<h1 align="center">Ik ben Sanjay Thambiaiah</h1>
 <img src="Dumbell.jpg" alt="Dumbell" style="width:400px;height:400px;">
 <a href="page2.html">Page2</a>
 </body>
