--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <title>SanJ</title>
    </head> 
 <body bgcolor="orange">
-<marquee> Dit is versie 3.7 dit is cool</marquee>
+<marquee> Dit is versie 3.8 dit is cool</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
-<h1 align="center">Ik ben Sanjay Thambiaiah</h1>
+<h1 align="center">Sanjay Thambiaiah</h1>
 <img src="Dumbell.jpg" alt="Dumbell" style="width:400px;height:400px;">
 <h2>Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train</h2>
 <a href="page2.html">Page2</a>
