--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
 <marquee> Dit is versie 3.10 dit is cool</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <h1 align="center">Sanjay Thambiaiah</h1>
-<img src="Dumbell.jpg" alt="Dumbell" style="width:400px;height:400px;">
+<style type="text/css">
+   .img_deg
+   {
+      float:right
+   }
+</style>
+<img class="img_deg" src="Dumbell.jpg" alt="Dumbell" style="width:400px;height:400px;">
 <h2>Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train</h2>
 <a href="page2.html">Page2</a>
 </body>
