--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>SanJ</title>
    </head> 
 <body bgcolor="orange">
-<marquee> Dit is versie 3.11 dit is cool</marquee>
+<marquee> Dit is versie 3.12 dit is cool</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <h1 align="center">Sanjay Thambiaiah</h1>
 <style type="text/css">
@@ -12,9 +12,17 @@
    {
       float:right
    }
+
+   .pos_cen
+   {
+position: absolute;
+width: 70%;
+   }
 </style>
+<div class="pos_cen">
 <img class="img_deg" src="Dumbell.jpg" alt="Dumbell" style="width:400px;height:400px;">
 <h2>Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train</h2>
+</div>
 <a href="page2.html">Page2</a>
 </body>
 </html>
