--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>SanJ</title>
    </head> 
 <body bgcolor="orange">
-<marquee> Dit is versie 3.12 dit is cool</marquee>
+<marquee> Dit is versie 3.13 dit is cool</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <h1 align="center">Sanjay Thambiaiah</h1>
 <style type="text/css">
@@ -17,10 +17,11 @@
    {
 position: absolute;
 width: 70%;
+left: 15%;
    }
 </style>
 <div class="pos_cen">
-<img class="img_deg" src="Dumbell.jpg" alt="Dumbell" style="width:400px;height:400px;">
+<img class="img_deg" src="Dumbell.jpg" alt="Dumbell" style="width:300px;height:300px;">
 <h2>Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train</h2>
 </div>
 <a href="page2.html">Page2</a>
