--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>SanJ</title>
    </head> 
 <body bgcolor="orange">
-<marquee> Dit is versie 3.13 dit is cool</marquee>
+<marquee> Dit is versie 3.14 dit is cool</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <h1 align="center">Sanjay Thambiaiah</h1>
 <style type="text/css">
@@ -18,6 +18,8 @@
 position: absolute;
 width: 70%;
 left: 15%;
+top: 20%;
+background-color: black;
    }
 </style>
 <div class="pos_cen">
