--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>SanJ</title>
    </head> 
 <body bgcolor="orange">
-<marquee> Dit is versie 3.14 dit is cool</marquee>
+<marquee> Dit is versie 3.15 dit is cool</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <h1 align="center">Sanjay Thambiaiah</h1>
 <style type="text/css">
@@ -20,6 +20,7 @@ width: 70%;
 left: 15%;
 top: 20%;
 background-color: black;
+padding: 30px;
    }
 </style>
 <div class="pos_cen">
