--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@ padding: 30px;
 </style>
 <div class="pos_cen">
 <img class="img_deg" src="Dumbell.jpg" alt="Dumbell" style="width:300px;height:300px;">
-<h2>Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train</h2>
+<h2 style="color: red;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train</h2>
 </div>
 <a href="page2.html">Page2</a>
 </body>
