--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>SanJ</title>
    </head> 
 <body bgcolor="orange">
-<marquee> Dit is versie 3.16 dit is cool</marquee>
+<marquee> Dit is versie 3.17 dit is cool</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <h1 align="center">Sanjay Thambiaiah</h1>
 <style type="text/css">
@@ -24,7 +24,7 @@ padding: 30px;
    }
 </style>
 <div class="pos_cen">
-<img class="img_deg" src="Dumbell.jpg" alt="Dumbell" style="width:300px;height:300px;">
+<img class="img_deg" src="ramdas.jpeg" alt="ramdas" style="width:300px;height:300px;">
 <h2 style="color: red;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train</h2>
 </div>
 <a href="page2.html">Page2</a>
