--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ position: absolute;
 width: 70%;
 left: 25%;
 top: 20%;
-background-color: white;
+background-color: black;
 padding: 30px;
    }
 </style>
