--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <marquee> Dit is versie 3.20 dit is cool</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <h1 align="center">Sanjay Thambiaiah</h1>
-<h2 style="flood-color: gold;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College</h2>
+<h2 style="color:gold;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College</h2>
 <style type="text/css">
    .img_deg
    {
