--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <title>SanJ</title>
    </head> 
 <body bgcolor="orange">
-<marquee> Dit is versie 3.21 dit is cool</marquee>
+<marquee> Dit is versie 3.22 dit is cool</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <h1 align="center">Sanjay Thambiaiah</h1>
-<h2 style="color:gold;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College</h2>
+<h2 style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College</h2>
 <style type="text/css">
    .img_deg
    {
