--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>SanJ</title>
    </head> 
 <body bgcolor="orange">
-<marquee> Dit is versie 3.22 dit is cool</marquee>
+<marquee> Dit is versie 3.23 dit is cool</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <h1 align="center">Sanjay Thambiaiah</h1>
 <h2 style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College</h2>
@@ -28,6 +28,6 @@ padding: 30px;
 <img class="img_deg" src="ramdas.jpeg" alt="ramdas" style="width:300px;height:300px;">
 <h2 style="color: red;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train</h2>
 </div>
-<a href="page2.html">Page2</a>
+<a href="page2.html" align="bottom">Page2</a>
 </body>
 </html>
