--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@ padding: 30px;
 <img class="img_deg" src="ramdas.jpeg" alt="ramdas" style="width:300px;height:300px;">
 <h2 style="color: red;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train</h2>
 </div>
-<a align="bottom" href="page2.html">Page2</a>
+<a href="page2.html">Page2</a>
 </body>
 </html>
