--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>SanJ</title>
    </head> 
 <body bgcolor="orange">
-<marquee> Dit is versie 3.25 dit is cool</marquee>
+<marquee> Dit is versie 3.26 dit is cool voor mijn eerste site toch?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <h1 align="center">Sanjay Thambiaiah</h1>
 <h2 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College</h2>
@@ -23,11 +23,18 @@ top: 50%;
 background-color: black;
 padding: 30px;
    }
+   .pos_bottom
+   {
+      position: fixed;
+      top: 0%;
+   }
 </style>
 <div class="pos_cen">
 <img class="img_deg" src="ramdas.jpeg" alt="ramdas" style="width:300px;height:300px;">
 <h2 style="color: red;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train</h2>
 </div>
-<a align="bottom" href="page2.html">Page2</a>
+<div class="pos_bottom">
+<a href="page2.html">Page2</a>
+</div>
 </body>
 </html>
