--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <title>SanJ</title>
    </head> 
 <body bgcolor="orange">
-<marquee> Dit is versie 3.26 dit is cool voor mijn eerste site toch?</marquee>
+<marquee> Dit is versie 3.27 dit is cool voor mijn eerste site toch?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
-<h1 align="center">Sanjay Thambiaiah</h1>
-<h2 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College</h2>
+<h1 align="center">Sanjay</h1>
+<h2 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Ik ben geboren in Leiderdorp. Mijn ouders komen allebei uit Sri Lanka.</h2>
 <style type="text/css">
    .img_deg
    {
@@ -26,7 +26,7 @@ padding: 30px;
    .pos_bottom
    {
       position: fixed;
-      top: 0%;
+      top: 100%;
    }
 </style>
 <div class="pos_cen">
