--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <title>SanJ</title>
    </head> 
 <body bgcolor="orange">
-<marquee> Dit is versie 3.27 dit is cool voor mijn eerste site toch?</marquee>
+<marquee> Dit is versie 3.28 dit is cool voor mijn eerste site toch?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
-<h1 align="center">Sanjay</h1>
+<h1 align="center">SANJAY</h1>
 <h2 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Ik ben geboren in Leiderdorp. Mijn ouders komen allebei uit Sri Lanka.</h2>
 <style type="text/css">
    .img_deg
@@ -34,7 +34,7 @@ padding: 30px;
 <h2 style="color: red;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train</h2>
 </div>
 <div class="pos_bottom">
-<a href="page2.html">Page2</a>
+<a href="page2.html">NEXT PAGE</a>
 </div>
 </body>
 </html>
