--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@ padding: 30px;
    .pos_bottom
    {
       position: fixed;
-      top: 10%;
+      bottom: 10%;
    }
 </style>
 <div class="pos_cen">
