--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>SanJ</title>
    </head> 
 <body bgcolor="orange">
-<marquee> Dit is versie 3.30 dit is cool voor mijn eerste site toch?</marquee>
+<marquee> Dit is versie 3.31 dit is cool voor mijn eerste site toch?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <h1 align="center">SANJAY</h1>
 <h2 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Ik ben geboren in Leiderdorp. Mijn ouders komen allebei uit Sri Lanka.</h2>
@@ -14,7 +14,7 @@
       float:right
    }
 
-   .pos_cen
+   .pos_right
    {
 position: absolute;
 width: 70%;
@@ -29,9 +29,27 @@ padding: 30px;
       bottom: 50%;
    }
 </style>
-<div class="pos_cen">
+<div class="pos_right">
 <img class="img_deg" src="ramdas.jpeg" alt="ramdas" style="width:300px;height:300px;">
 <h2 style="color: red;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train</h2>
+</div>
+<style type="text/css">
+.img_up
+{
+   float:right
+}
+
+.pos_right
+{
+position: absolute;
+width: 70%;
+left: 25%;
+top: 50%;
+background-color: black;
+padding: 30px;
+</style>
+<div class="pos_left">
+<img class="img_up" src="schooljpg" alt="Vlietland College" style="width:300px;height:300px;">  
 </div>
 <div class="pos_bottom">
 <a href="page2.html">NEXT PAGE</a>
