--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <title>SanJ</title>
    </head> 
 <body bgcolor="orange">
-<marquee> Dit is versie 3.34 dit is cool voor mijn eerste site toch?</marquee>
+<marquee> Dit is versie 3.35 dit is cool voor mijn eerste site toch?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <h1 align="center">SANJAY</h1>
 <h2 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Ik ben geboren in Leiderdorp. Mijn ouders komen allebei uit Sri Lanka.</h2>
@@ -28,12 +28,21 @@ padding: 30px;
       position: fixed;
       bottom: 50%;
    }
+}
+   .pos_down
+   {
+      position: fixed;
+      bottom: 50%;
+   }
+</style>
 </style>
 <div class="pos_right">
 <img class="img_deg" src="ramdas.jpeg" alt="ramdas" style="width:300px;height:300px;">
 <h2 style="color: red;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train</h2>
 </div>
+<div class="pos_down">
 <img src="school.jpg" alt="Vlietland College">
+</div>
 <div class="pos_bottom">
 <a href="page2.html">NEXT PAGE</a>
 </div>
