--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
    <link rel="stylesheet" href=opmaak.css">
 <title>SanJ</title>
    </head> 
-<body bgcolor="orange">
+<body>
 <marquee> Versie 3.45 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <h1 align="center">SANJAY</h1>
