--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
    <link rel="stylesheet" href=opmaak.css">
 <title>SanJ</title>
    </head> 
-<body bgcolor="orange">
-<marquee> Versie 3.45 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<body>
+<marquee> Versie 3.46 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <h1 align="center">SANJAY</h1>
 <h2 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Ik ben geboren in Leiderdorp. Mijn ouders komen allebei uit Sri Lanka.</h2>
