--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
 <title>SanJ</title>
    </head> 
 <body>
-<marquee> Versie 3.53 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+   <ul>
+      <li><a href="page2.html">Next page</a></li>
+    </ul>
+<marquee> Versie 3.54 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <h1 align="center">SANJAY</h1>
 <h2 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Ik ben geboren in Leiderdorp. Mijn ouders komen allebei uit Sri Lanka.</h2>
