--- a/index.html
+++ b/index.html
@@ -5,8 +5,16 @@
 <title>SanJ</title>
    </head> 
 <body>
-<marquee> Versie 3.65 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<marquee> Versie 3.66 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
+<div class="dropdown">
+   <button class="dropbtn">Dropdown</button>
+   <div class="dropdown-content">
+     <a href="#">Link 1</a>
+     <a href="#">Link 2</a>
+     <a href="#">Link 3</a>
+   </div>
+ </div>
 <ul>
    <li><a align="right" href="page2.html">Next page</a></li>
  </ul>
