--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div class="dropdown">
    <button class="dropbtn">Dropdown</button>
    <div class="dropdown-content">
-     <a href="#">Next page</a>
+     <a href="page2.html">Next page</a>
    </div>
  </div>
 <ul>
