--- a/page2.html
+++ b/page2.html
@@ -5,6 +5,34 @@
     <title>SanJ2</title>
 </head>
 <body>
+<marquee> Versie 3.74 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<marquee direction="right" behaviour="scroll"></marquee>
+    <style type="text/css">
+        .img_deg
+        {
+           float:right
+        }
+     
+        .pos_right
+        {
+     position: absolute;
+     width: 70%;
+     left: 25%;
+     top: 95%;
+     background-color: black;
+     padding: 30px;
+        }
+        .pos_bottom
+        {
+           position: fixed;
+           bottom: 50%;
+        }
+     </style>
+     </style>
+     <div class="pos_right">
+     <img class="img_deg" src="ramdas.jpeg" alt="ramdas" style="width:300px;height:300px;">
+     <h2 style="color: red;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train. Ik ben begonnen met trainen omdat ik overgewicht was en gepest werd. Nu doe ik het om sterker te worden.</h2>
+     </div>
     <a href="https://sanj071.github.io">Page1</a>
 </body>
 </html>
