--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>SanJ</title>
    </head> 
 <body>
-<marquee> Versie 3.76 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<marquee> Versie 3.77 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <div class="dropdown">
    <button class="dropbtn">Dropdown</button>
@@ -41,8 +41,8 @@ padding: 30px;
 </style>
 </style>
 <div class="pos_right">
-<img class="img_deg" src="ramdas.jpeg" alt="ramdas" style="width:300px;height:300px;">
-<h2 style="color: red;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train. Ik ben begonnen met trainen omdat ik overgewicht was en gepest werd. Nu doe ik het om sterker te worden.</h2>
+<img class="img_deg" src="school.jpg" alt="school" style="width:300px;height:300px;">
+<h2 style="color: red;">Ik zit nu (2024) in havo 4 met het profiel N&T</h2>
 </div>
 <img src="school.jpg" alt="Vlietland College" style="width:450px;height:350px;">
 <div class="pos_bottom">
