--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <title>SanJ</title>
    </head> 
 <body>
-<marquee> Versie 3.77 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<marquee> Versie 3.78 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <div class="dropdown">
    <button class="dropbtn">Dropdown</button>
@@ -28,7 +28,7 @@
    {
 position: absolute;
 width: 70%;
-left: 25%;
+right: 25%;
 top: 95%;
 background-color: black;
 padding: 30px;
@@ -43,9 +43,6 @@ padding: 30px;
 <div class="pos_right">
 <img class="img_deg" src="school.jpg" alt="school" style="width:300px;height:300px;">
 <h2 style="color: red;">Ik zit nu (2024) in havo 4 met het profiel N&T</h2>
-</div>
-<img src="school.jpg" alt="Vlietland College" style="width:450px;height:350px;">
-<div class="pos_bottom">
 </div>
 </body>
 </html>
