--- a/page2.html
+++ b/page2.html
@@ -5,7 +5,8 @@
     <title>SanJ2</title>
 </head>
 <body>
-<marquee> Versie 3.83 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<link rel="stylesheet" href=opmaak.css></link>
+<marquee> Versie 3.84 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
     <style type="text/css">
         .img_deg
