--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
    <head>
    <link rel="stylesheet" href=opmaak.css></link>
-<title>SanJ</title>
+<title>SanJ Homepage</title>
    </head> 
 <body>
-<marquee> Versie 3.87 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<marquee> Versie 3.88 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <div class="dropdown">
    <button class="dropbtn">Dropdown</button>
