--- a/page2.html
+++ b/page2.html
@@ -6,12 +6,12 @@
 </head>
 <body>
 <link rel="stylesheet" href=opmaak.css></link>
-<marquee> Versie 3.87 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<marquee> Versie 3.88 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <div class="dropdown"></div>
    <button class="dropbtn">Dropdown</button>
    <div class="dropdown-content">
-     <a href="https://sanj071.github.io">Page1</a>
+     <a href="https://sanj071.github.io">homepage</a>
    </div>
  </div>
     <style type="text/css">
