--- a/page2.html
+++ b/page2.html
@@ -6,9 +6,9 @@
 </head>
 <body>
 <link rel="stylesheet" href=opmaak.css></link>
-<marquee> Versie 3.88 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<marquee> Versie 3.89 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
-<div class="dropdown"></div>
+<div class="dropdown">
    <button class="dropbtn">Dropdown</button>
    <div class="dropdown-content">
      <a href="https://sanj071.github.io">homepage</a>
