--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,7 @@
 <marquee> Versie 3.91 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <div class="dropdown">
-   <button class="dropbtn">Dropdown</button>
+   <button class="dropbtn">More</button>
    <div class="dropdown-content">
      <a href="https://sanj071.github.io">homepage</a>
    </div>
