--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <marquee> Versie 3.91 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <div class="dropdown">
-   <button class="dropbtn">Dropdown</button>
+   <button class="dropbtn">More</button>
    <div class="dropdown-content">
      <a href="page2.html">Next page</a>
    </div>
