--- a/page2.html
+++ b/page2.html
@@ -6,8 +6,10 @@
 </head>
 <body>
 <link rel="stylesheet" href=opmaak.css></link>
-<marquee> Versie 3.91 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<marquee> Versie 3.92 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
+<!--Dit is een game die gaat over het Binair stelsel. -->
+<iframe src="https://games.penjee.com/binary-bonanza/game.php" width="700" height="500" frameborder="no" scrolling="no" ></iframe>
 <div class="dropdown">
    <button class="dropbtn">More</button>
    <div class="dropdown-content">
