--- a/index.html
+++ b/index.html
@@ -5,10 +5,12 @@
 <title>SanJ Homepage</title>
    </head> 
 <body>
-<marquee> Versie 3.93 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
+ <marquee> Versie 3.94 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
+<!--Dropdown in zodat je het dropdown menu kan zien-->
 <div class="dropdown">
-   <button class="dropbtn">More</button>
+   <button class="dropbtn">Meer</button>
    <div class="dropdown-content">
      <a href="page2.html">Next page</a>
    </div>
@@ -18,6 +20,7 @@
  </ul>
 <h1 align="center">SANJAY</h1>
 <h2 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Ik ben geboren in Leiderdorp. Mijn ouders komen allebei uit Sri Lanka.</h2>
+ <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
 <style type="text/css">
    .img_deg
    {
