--- a/page2.html
+++ b/page2.html
@@ -6,14 +6,16 @@
 </head>
 <body>
 <link rel="stylesheet" href=opmaak.css></link>
-<marquee> Versie 3.93 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
+<marquee> Versie 3.94 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <div class="dropdown">
-   <button class="dropbtn">More</button>
+   <button class="dropbtn">meer</button>
    <div class="dropdown-content">
-     <a href="https://sanj071.github.io">homepage</a>
+     <a href="https://sanj071.github.io">Hoofdpagina</a>
    </div>
  </div>
+ <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
     <style type="text/css">
         .img_deg
         {
