--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
 <title>SanJ Homepage</title>
    </head> 
 <body>
+  <link rel="icon" type="image/x-icon" href="logo.jpeg">
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
- <marquee> Versie 3.94 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+ <marquee> Versie 3.95 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <!--Dropdown in zodat je het dropdown menu kan zien-->
 <div class="dropdown">
