--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
    <head>
    <link rel="stylesheet" href=opmaak.css></link>
-<title>SanJ Homepage</title>
+<title>SanJ Hoofdpagina</title>
    </head> 
 <body>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
