--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
  <marquee> Versie 3.95 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
-<!--Dropdown in zodat je het dropdown menu kan zien-->
+<!--Dropdown is zodat je het dropdown menu kan zien en er een link is die je naar de volgende pagina brengt.-->
 <div class="dropdown">
    <button class="dropbtn">Meer</button>
    <div class="dropdown-content">
@@ -16,6 +16,7 @@
    </div>
  </div>
 <ul>
+   <!--Dit is op de link naar de volgende pagina te kunnen zien aan de rechterkant.-->
    <li><a align="right" href="page2.html">Next page</a></li>
  </ul>
 <h1 align="center">SANJAY</h1>
