--- a/page2.html
+++ b/page2.html
@@ -2,12 +2,12 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>SanJ2</title>
+    <title>Mijn hobby's</title>
 </head>
 <body>
 <link rel="stylesheet" href=opmaak.css></link>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-<marquee> Versie 3.95 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<marquee> Versie 3.96 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <div class="dropdown">
    <button class="dropbtn">meer</button>
