--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
    </head> 
 <body>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
- <marquee> Versie 3.96 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+ <marquee> Versie 3.97 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <!--Dropdown is zodat je het dropdown menu kan zien en er een link is die je naar de volgende pagina brengt.-->
 <div class="dropdown">
    <button class="dropbtn">Meer</button>
    <div class="dropdown-content">
      <a href="page2.html">Hobby's</a>
+     <a href="game.html">game</a>
    </div>
  </div>
 <ul>
