--- a/game.html
+++ b/game.html
@@ -17,7 +17,7 @@
    </div>
  </div>
    <!--Dit is een game die gaat over het Binair stelsel. -->
-<iframe src="https://games.penjee.com/binary-bonanza/game.php" width="600" height="400" frameborder="no" scrolling="no" ></iframe>  
+<iframe src="https://games.penjee.com/binary-bonanza/game.php" width="600" height="400" frameborder="center" scrolling="no" ></iframe>  
    </div>
 </body>
 </html>
