--- a/page2.html
+++ b/page2.html
@@ -7,11 +7,11 @@
 <body>
 <link rel="stylesheet" href=opmaak.css></link>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-<marquee> Versie 3.98 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<marquee> Versie 3.99 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <div class="dropdown">
    <button class="dropbtn">meer</button>
-   <div class="dropdown-content">
+   <div align="top" class="dropdown-content">
      <a href="https://sanj071.github.io">Hoofdpagina</a>
      <a href="game.html">game</a>
    </div>
