--- a/game.html
+++ b/game.html
@@ -7,10 +7,10 @@
 <body>
 <link rel="stylesheet" href=opmaak.css></link>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-<marquee> Versie 3.99 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<marquee> Versie 4.0 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <div class="dropdown">
-   <button class="dropbtn">meer</button>
+   <button align="top"  class="dropbtn">meer</button>
    <div class="dropdown-content">
      <a href="https://sanj071.github.io">Hoofdpagina</a>
      <a href="page2.html">2e pagina</a>
