--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
 <body>
 <link rel="stylesheet" href=opmaak.css></link>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-<marquee> Versie 4.1 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<marquee> Versie 4.0 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <div class="dropdown">
    <button class="dropbtn">meer</button>
@@ -17,7 +17,7 @@
    </div>
  </div>
    <!--Dit is een game die gaat over het Binair stelsel. -->
-<iframe align="top" src="https://games.penjee.com/binary-bonanza/game.php" width="700" height="500" frameborder="center" scrolling="no" ></iframe>  
+<iframe align="center" src="https://games.penjee.com/binary-bonanza/game.php" width="700" height="500" frameborder="center" scrolling="no" ></iframe>  
    </div>
 </body>
 </html>
