--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
    </head> 
 <body>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
- <marquee> Versie 4.1 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+ <marquee> Versie 4.0 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <!--Dropdown is zodat je het dropdown menu kan zien en er een link is die je naar de volgende pagina brengt.-->
 <div class="dropdown">
@@ -47,7 +47,10 @@ padding: 30px;
 </style>
 <div class="pos_right">
 <img class="img_deg" src="school.jpg" alt="school" style="width:300px;height:300px;">
-<h2 style="color: red;">Ik zit nu (2024) in havo 4 met het profiel N&T</h2>
+<h2 style="color: red;">Ik zit nu (2024) in havo 4 met het profiel N&T. Ik heb veel nieuwe vrienden gemaakt die nu ook hun eigen sites hebben. hieronder vind je een link naar hun website. Nu alleen nog raden wie het zijn!</h2>
 </div>
+<a href="https://flriis.github.io/">flriis</a>
+<a href="https://theprogrammerdr.github.io/Pagina2.html">The programmerdr</a>
+<a href="tctam.nl/?blank-tab-cloudwise">Tc_tam</a>
 </body>
 </html>
