--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
    <button class="dropbtn">Meer</button>
    <div class="dropdown-content">
      <a href="page2.html">Hobby's</a>
-     <a href="game.html">game</a>
+     <a href="game.html">Binair Stelsel</a>
    </div>
  </div>
 <ul>
