--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Binary game</title>
+    <title>Binair stelsel</title>
 </head>
 <body>
 <link rel="stylesheet" href=opmaak.css></link>
@@ -16,6 +16,7 @@
      <a href="page2.html">2e pagina</a>
    </div>
  </div>
+ <h1 align="center">Binair stelsel</h1>
    <!--Dit is een game die gaat over het Binair stelsel. -->
 <iframe align="center" src="https://games.penjee.com/binary-bonanza/game.php" width="700" height="500" frameborder="center" scrolling="no" ></iframe>  
    </div>
