--- a/page2.html
+++ b/page2.html
@@ -13,7 +13,7 @@
    <button class="dropbtn">meer</button>
    <div class="dropdown-content">
      <a href="https://sanj071.github.io">Hoofdpagina</a>
-     <a href="game.html">game</a>
+     <a href="game.html">Binair stelsel</a>
    </div>
  </div>
  <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
