--- a/game.html
+++ b/game.html
@@ -7,7 +7,7 @@
 <body>
 <link rel="stylesheet" href=opmaak.css></link>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-<marquee> Versie 4.2 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+<marquee> Versie 4.3 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <div class="dropdown">
    <button class="dropbtn">meer</button>
@@ -18,6 +18,7 @@
  </div>
  <h1 align="center">Binair stelsel</h1>
  <h3 align="center" style="color:grey;">ASCII staat voor American Standard Code for Information Interchange, wat je computer en vele andere apparaten gebruiken.</h3>
+ <img src="binair.png" alt="binair stelsel"
    <!--Dit is een game die gaat over het Binair stelsel. -->
 <iframe align="center" src="https://games.penjee.com/binary-bonanza/game.php" width="700" height="500" frameborder="center" scrolling="no" ></iframe>  
    </div>
