--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <div class="dropdown">
    <button class="dropbtn">Meer</button>
    <div class="dropdown-content">
+      <!--href is voor een link naar bijv een site of 2e pagina en de tekst daarna zie je op de site-->
      <a href="page2.html">Hobby's</a>
      <a href="game.html">Binair Stelsel</a>
    </div>
