--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
    <link rel="icon" type="image/x-icon" href="favicon.ico">
 <body>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
- <marquee> Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+ <marquee> Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <!--Dropdown is zodat je het dropdown menu kan zien en er een link is die je naar de volgende pagina brengt.-->
 <div class="dropdown">
    <button class="dropbtn">Meer</button>
    <div class="dropdown-content">
-      <!--href is voor een link naar bijv een site of 2e pagina en de tekst daarna zie je op de site-->
+      <!--href is voor een link naar bijv een site of 2e pagina en de tekst daarna zie je op de site  -->
      <a href="page2.html">Hobby's</a>
      <a href="game.html">Binair Stelsel</a>
    </div>
@@ -53,6 +53,7 @@ padding: 30px;
 <a style="color: red;" href="https://flriis.github.io/">flriis</a>
 <a style="color: red;" href="https://theprogrammerdr.github.io/Pagina2.html">The programmerdr</a>
 <a style="color: red;" href="https://tctam.nl/">Tc_tam</a>
+<a style="color: red;" href="https://tnobelen.github.io/">Tnobelen</a>
 </h2>
 </div>
 </body>
