--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ padding: 30px;
 <a style="color: red;" href="https://flriis.github.io/">flriis</a>
 <a style="color: red;" href="https://theprogrammerdr.github.io/Pagina2.html">The programmerdr</a>
 <a style="color: red;" href="https://tctam.nl/">Tc_tam</a>
-<a style="color: red;" href="https://tnobelen.github.io/">Tnobelen</a>
+<a style="color: red;" href="https://tnobelen.github.io/">TNobelen</a>
 </h2>
 </div>
 </body>
