--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ padding: 30px;
 <a style="color: red;" href="https://theprogrammerdr.github.io/Pagina2.html">The programmerdr</a>
 <a style="color: red;" href="https://tctam.nl/">Tc_tam</a>
 <a style="color: red;" href="https://tnobelen.github.io/">TNobelen</a>
-<a style="color: red;" href="https://th0mvn.github.io/">Th0mvnNobelen/a>
+<a style="color: red;" href="https://th0mvn.github.io/">Th0mvnNobelen</a>
 </h2>
 </div>
 </body>
