--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@ padding: 30px;
 </style>
 <div class="pos_right">
 <img class="img_deg" src="school.jpg" alt="school" style="width:300px;height:300px;">
-<h2 style="color: red;">Ik zit nu (2024) in havo 4 met het profiel N&T. Ik heb veel nieuwe vrienden gemaakt die nu ook hun eigen sites hebben. hieronder vind je een link naar hun website. Nu alleen nog raden wie het zijn!
-<a style="color: red;" href="https://flriis.github.io/">flriis</a>
-<a style="color: red;" href="https://theprogrammerdr.github.io/Pagina2.html">The programmerdr</a>
-<a style="color: red;" href="https://tctam.nl/">Tc_tam</a>
-<a style="color: red;" href="https://tnobelen.github.io/">TNobelen</a>
-<a style="color: red;" href="https://th0mvn.github.io/">Th0mvnNobelen</a>
+<h2 style="color: rgb(0, 51, 255);">Ik zit nu (2024) in havo 4 met het profiel N&T. Ik heb veel nieuwe vrienden gemaakt die nu ook hun eigen sites hebben. hieronder vind je een link naar hun website. Nu alleen nog raden wie het zijn!
+<a style="color:  rgb(0, 51, 255);" href="https://flriis.github.io/">flriis</a>
+<a style="color:  rgb(0, 51, 255);" href="https://theprogrammerdr.github.io/Pagina2.html">The programmerdr</a>
+<a style="color:  rgb(0, 51, 255);" href="https://tctam.nl/">Tc_tam</a>
+<a style="color:  rgb(0, 51, 255);" href="https://tnobelen.github.io/">TNobelen</a>
+<a style="color: rgb(0, 51, 255);" href="https://th0mvn.github.io/">Th0mvnNobelen</a>
 </h2>
 </div>
 </body>
