--- a/game.html
+++ b/game.html
@@ -18,7 +18,7 @@
  </div>
  <h1 align="center">Binair stelsel</h1>
  <h3 align="center" style="color:grey;">ASCII staat voor American Standard Code for Information Interchange, wat je computer en vele andere apparaten gebruiken.</h3>
- <img src="binair.png" align="center" alt="binair stelsel" style="width:700px;height:700px;">
+ <img src="binair.png" align="50%" alt="binair stelsel" style="width:700px;height:700px;">
    <!--Dit is een game die gaat over het Binair stelsel. -->
 <iframe align="center" src="https://games.penjee.com/binary-bonanza/game.php" width="700" height="500" frameborder="center" scrolling="no" ></iframe>  
    </div>
