--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <link rel="icon" type="image/x-icon" href="favicon.ico">
 <body>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
- <marquee> Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+ <marquee> Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <!--Dropdown is zodat je het dropdown menu kan zien en er een link is die je naar de volgende pagina brengt.-->
 <div class="dropdown">
@@ -49,6 +49,13 @@ padding: 30px;
 </style>
 <div class="pos_right">
 <img class="img_deg" src="school.jpg" alt="school" style="width:300px;height:300px;">
+<div class="dropdown">
+   <img src="school.jpg" alt="school" width="100" height="50">
+   <div class="dropdown-content">
+   <img src="school.jpg" alt="school" width="300" height="200">
+   <div class="desc">Vlietland College</div>
+   </div>
+ </div>
 <h2 style="color: red;">Ik zit nu (2024) in havo 4 met het profiel N&T. Ik heb veel nieuwe vrienden gemaakt die nu ook hun eigen sites hebben. hieronder vind je een link naar hun website. Nu alleen nog raden wie het zijn!
 <a style="color:  rgb(0, 51, 255);" href="https://flriis.github.io/">flriis</a>
 <a style="color:  rgb(0, 51, 255);" href="https://theprogrammerdr.github.io/Pagina2.html">The programmerdr</a>
