--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <link rel="icon" type="image/x-icon" href="favicon.ico">
 <body>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
- <marquee> Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+ <marquee> Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <!--Dropdown is zodat je het dropdown menu kan zien en er een link is die je naar de volgende pagina brengt.-->
 <div class="dropdown">
@@ -48,10 +48,11 @@ padding: 30px;
 </style>
 </style>
 <div class="pos_right">
+<img class="img_deg" src="school.jpg" alt="school" style="width:300px;height:300px;">
 <div class="dropdown">
-   <img class="img_deg" src="school.jpg" alt="school" width="300" height="300">
+   <img src="school.jpg" alt="school" width="100" height="50">
    <div class="dropdown-content">
-   <img csrc="school.jpg" alt="school" width="300" height="200">
+   <img src="school.jpg" alt="school" width="300" height="200">
    <div class="desc">Vlietland College</div>
    </div>
  </div>
