--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <link rel="icon" type="image/x-icon" href="favicon.ico">
 <body>
 <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
- <marquee> Versie 4.6 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+ <marquee> Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
 <marquee direction="right" behaviour="scroll"></marquee>
 <!--Dropdown is zodat je het dropdown menu kan zien en er een link is die je naar de volgende pagina brengt.-->
 <div class="dropdown">
@@ -16,6 +16,7 @@
       <!--href is voor een link naar bijv een site of 2e pagina en de tekst daarna zie je op de site  -->
      <a href="page2.html">Hobby's</a>
      <a href="game.html">Binair Stelsel</a>
+     <a href="Kleur.html">Kleurmoddelen</a>
    </div>
  </div>
 <ul>
