--- a/game.html
+++ b/game.html
@@ -14,6 +14,7 @@
    <div class="dropdown-content">
      <a href="https://sanj071.github.io">Hoofdpagina</a>
      <a href="page2.html">2e pagina</a>
+     <a href="Kleur.html">Kleurmoddelen</a>
    </div>
  </div>
  <h1 align="center">Binair stelsel</h1>
