--- a/page2.html
+++ b/page2.html
@@ -14,6 +14,7 @@
    <div class="dropdown-content">
      <a href="https://sanj071.github.io">Hoofdpagina</a>
      <a href="game.html">Binair stelsel</a>
+     <a href="Kleur.html">Kleurmoddelen</a>
    </div>
  </div>
  <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
