--- a/Kleur.html
+++ b/Kleur.html
@@ -18,6 +18,7 @@
    </div>
  </div>
  <h1 align="center">Kleurmoddelen</h1>
+ <h3 align="center" style="color:grey;">Deze pagina is nog in onderhoud.</h3>
     </body>
     </html>
     
