--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@ padding: 30px;
       bottom: 100%;
    }
 </style>
+</style>
+<div class="pos_right">
+<img class="img_deg" src="school.jpg" alt="school" width="100" height="50">
+<div class="dropdown-content">
+<img src="school.jpg" alt="school" width="300" height="200">
+<div class="desc">Vlietland College</div>
 <div class="dropdown">
-   <img class="img_deg" src="school.jpg" alt="school" width="100" height="50">
-   <div class="dropdown-content">
-   <img src="school.jpg" alt="school" width="300" height="200">
-   <div class="desc">Vlietland College</div>
    </div>
  </div>
 <h2 style="color: red;">Ik zit nu (2024) in havo 4 met het profiel N&T. Ik heb veel nieuwe vrienden gemaakt die nu ook hun eigen sites hebben. hieronder vind je een link naar hun website. Nu alleen nog raden wie het zijn!
