--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
 <ul>
    <!--Dit is op de link naar de volgende pagina te kunnen zien aan de rechterkant.-->
    <li><a align="right" href="page2.html">Next page</a></li>
-   <li><a align="right" href="game.html">Next page</a></li>
-   <li><a align="right" href="Kleur.html">Next page</a></li>
+   <li><a align="right" href="game.html">Binair Stelsel</a></li>
+   <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
  </ul>
 <h1 align="center">SANJAY</h1>
 <h3 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Ik ben geboren in Leiderdorp. Mijn ouders komen allebei uit Sri Lanka. Op deze site leer je meer over mij en kan je een game over het binair stelsel spelen!</h3>
