--- a/game.html
+++ b/game.html
@@ -17,6 +17,9 @@
      <a href="Kleur.html">Kleurmoddelen</a>
    </div>
  </div>
+ <li><a align="right" href="page2.html"nj\,</a></li>
+ <li><a align="right" href="game.html">Binair Stelsel</a></li>
+ <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
  <h1 align="center">Binair stelsel</h1>
  <h3 align="center">Het binair stelsel bestaat uit nullen en eenen (0 & 1). Elk getal noemen we een bit, 8 bits vormt een byte.</h3>
  <img src="Binairstelsel.png" align="center" alt="binair stelsel werking" style="width:400px;height:200px;">
