--- a/game.html
+++ b/game.html
@@ -17,7 +17,7 @@
      <a href="Kleur.html">Kleurmoddelen</a>
    </div>
  </div>
- <li><a align="right" href="page2.html"nj\,</a></li>
+ <li><a align="right" href="page2.html"></a></li>
  <li><a align="right" href="game.html">Binair Stelsel</a></li>
  <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
  <h1 align="center">Binair stelsel</h1>
