--- a/game.html
+++ b/game.html
@@ -15,6 +15,8 @@
      <a href="https://sanj071.github.io">Hoofdpagina</a>
      <a href="page2.html">Hobby's</a>
      <a href="Kleur.html">Kleurmoddelen</a>
+   </div>
+</div>
  <h1 align="center">Binair stelsel</h1>
  <h3 align="center">Het binair stelsel bestaat uit nullen en eenen (0 & 1). Elk getal noemen we een bit, 8 bits vormt een byte.</h3>
  <img src="Binairstelsel.png" align="center" alt="binair stelsel werking" style="width:400px;height:200px;">
