--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <marquee direction="right" behaviour="scroll"></marquee>
 <ul>
    <!--Dit is op de link naar de volgende pagina te kunnen zien aan de rechterkant.-->
-   <li><a align="right" href="page2.html">Next page</a></li>
+   <li><a align="right" href="page2.html">Over mij</a></li>
    <li><a align="right" href="game.html">Binair Stelsel</a></li>
    <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
  </ul>
