--- a/Kleur.html
+++ b/Kleur.html
@@ -1,38 +1,44 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <meta charset="UTF-8" />
-    <title>Kleurmoddelen</title>
+  <meta charset="UTF-8" />
+  <title>Kleurmoddelen</title>
 </head>
+
 <body>
-<link rel="stylesheet" href=opmaak.css></link>
-<!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
-<marquee> Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
-<marquee direction="right" behaviour="scroll"></marquee>
-<div class="dropdown">
-   <button class="dropbtn">meer</button>
-   <div class="dropdown-content">
-     <a href="https://sanj071.github.io">Hoofdpagina</a>
-     <a href="page2.html">Hobby's</a>
-     <a href="game.html">Binair stelsel</a>
-   </div>
- </div>
- <style type="text/css">
-</style>
-</style>
- <div class="kleurrood">
- <h1 align="center">Kleurmoddelen</h1>
- </div>
- <div class="roodtekst1">
- <h3 align="center" style="color:rgb(0, 0, 0);">Een manier om een kleur numeriek te beschrijven wordt een kleurmodel genoemd. Veel voorkomende kleurmodellen zijn RGB, HSV en CMYKc.</h3>
-</div>  
-<div class="roodtekst2">
-  <h3 align="center" style="color:rgb(0, 0, 0);">Bij RGB is het zo dat de drie primaire kleuren rood, blauw en groen een additief kleursysteem vormen. Dit model wordt gebruikt om door het gebruik van een code kleuren vast te leggen. De kleuren rood, groen en blauw zijn de kleurcomponenten en zwart is de basiskleur.</h3>
- </div>  
- <br>
- <center>  
- <img src="RGB.jpg" alt="RGB" style="width:400px;height:400px;">
-</center>
+  <link rel="stylesheet" href=opmaak.css>
+  </link>
+  <!--marquee zorgt ervoor dat de tekst van rechts naar links gaat bovenin het scherm-->
+  <marquee> Versie 4.5 Dit is toch cool voor mijn eerste site, of niet?</marquee>
+  <marquee direction="right" behaviour="scroll"></marquee>
+  <div class="dropdown">
+    <button class="dropbtn">meer</button>
+    <div class="dropdown-content">
+      <a href="https://sanj071.github.io">Hoofdpagina</a>
+      <a href="page2.html">Hobby's</a>
+      <a href="game.html">Binair stelsel</a>
+    </div>
+  </div>
+  <style type="text/css">
+  </style>
+  </style>
+  <div class="kleurrood">
+    <h1 align="center">Kleurmoddelen</h1>
+  </div>
+  <div class="roodtekst1">
+    <h3 align="center" style="color:rgb(0, 0, 0);">Een manier om een kleur numeriek te beschrijven wordt een kleurmodel
+      genoemd. Veel voorkomende kleurmodellen zijn RGB, HSV en CMYKc.</h3>
+  </div>
+  <div class="roodtekst2">
+    <h3 align="center" style="color:rgb(0, 0, 0);">Bij RGB is het zo dat de drie primaire kleuren rood, blauw en groen
+      een additief kleursysteem vormen. Dit model wordt gebruikt om door het gebruik van een code kleuren vast te
+      leggen. De kleuren rood, groen en blauw zijn de kleurcomponenten en zwart is de basiskleur.</h3>
+  </div>
+  <br>
+  <center>
+    <img src="RGB.jpg" alt="RGB" style="width:400px;height:400px;">
+  </center>
 </body>
-    </html>
-    
+
+</html>
