--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
    <li><a align="right" href="page2.html">Over mij</a></li>
    <li><a align="right" href="game.html">Binair Stelsel</a></li>
    <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
+   <li><a align="right">Kleurmoddelen</a></li>
  </ul>
 <h1 align="center">SANJAY</h1>
 <h3 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Ik ben geboren in Leiderdorp. Mijn ouders komen allebei uit Sri Lanka. Op deze site leer je meer over mij en kan je een game over het binair stelsel spelen!</h3>
