--- a/index.html
+++ b/index.html
@@ -23,11 +23,12 @@
 </style>
 </style>
 <div class="school">
-
+<center>
 <div class="school">
    <h1 style="color: red;">dit is mijn school</h1>
    <img class="img_deg" src="school.jpg" alt="school" style="width:300px;height:300px;">
    <br>
+</center>
 </div>
 
 </div>
