--- a/page2.html
+++ b/page2.html
@@ -19,28 +19,16 @@
      <marquee direction="right" behaviour="scroll"></marquee></li>
  </ul>
  <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
-    <style type="text/css">
-        .img_deg
-        {
-           float:right
-        }
-     
-        .pos_right
-        {
-     position: absolute;
-     width: 70%;
-     left: 25%;
-     top: 20%;
-     background-color: black;
-     padding: 30px;
-        }
-        .pos_bottom
-        {
-           position: fixed;
-           bottom: 50%;
-        }
-     </style>
-     </style>
+ div class="school">
+ <center>
+ <div class="school">
+    <h1 style="color: red;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train. Ik ben begonnen met trainen omdat ik overgewicht was en gepest werd. Nu doe ik het om sterker te worden.</h1>
+    <img class="img_deg" src="ramdas.jpeg" alt="school" style="width:300px;height:300px;">
+    <br>
+ </center>
+ </div>
+ 
+ </div>
      <div class="pos_right">
      <img class="img_deg" src="ramdas.jpeg" alt="ramdas" style="width:300px;height:300px;">
      <h2 style="color: red;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train. Ik ben begonnen met trainen omdat ik overgewicht was en gepest werd. Nu doe ik het om sterker te worden.</h2>
