--- a/page2.html
+++ b/page2.html
@@ -19,7 +19,7 @@
      <marquee direction="right" behaviour="scroll"></marquee></li>
  </ul>
  <!--De code hieronder is zodat de plaatjes en de tekst samen zitten en op een bepaalde plek zitten-->
- div class="school">
+ <div class="sport">
  <center>
  <div class="sport">
     <h1 style="color: orange;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train. Ik ben begonnen met trainen omdat ik overgewicht was en gepest werd. Nu doe ik het om sterker te worden.</h1>
