--- a/game.html
+++ b/game.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8" />
-    <title>Binair stelsel</title>
+    <title style="color: white;">Binair stelsel</title>
 </head>
 <body>
 
@@ -21,7 +21,7 @@
  </ul>
 <center> 
  <h1>Binair stelsel</h1>
- <h3 align="center">Het binair stelsel bestaat uit nullen en eenen (0 & 1). Elk getal noemen we een bit, 8 bits vormt een byte.</h3>
+ <h3 align="center" style="color: white;">Het binair stelsel bestaat uit nullen en eenen (0 & 1). Elk getal noemen we een bit, 8 bits vormt een byte.</h3>
  <img src="Binairstelsel.png" align="center" alt="binair stelsel werking" style="width:400px;height:200px;">
  <h2 align="center">ASCII</h2>
  <h3 align="center" style="color:grey;">Van deze 25 kunnen we ook een letter maken, dit doen we met ASCII (American Standard Code for Information Interchange). De standaard ASCII-tabel bestaat uit de 94 zichtbare tekens (hoofdletters en kleine letters, cijfers, leestekens en enkele andere symbolen), de spatie, en 33 stuurcodes. De stuurcodes representeren geen zichtbare tekens, maar zijn opdrachten aan uitvoerapparaten of geven informatie over de gegevens die verstuurd worden.</h3>
