--- a/vrienden.html
+++ b/vrienden.html
@@ -18,7 +18,7 @@
      <marquee direction="right" behaviour="scroll"></marquee></li>
  </ul>
 <h1 style="color: red;" align="center">Sites van vrienden</h1>
-<h3 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Ik ben geboren in Leiderdorp. Mijn ouders komen allebei uit Sri Lanka. Op deze site leer je meer over mij en kan je een game over het binair stelsel spelen!</h3>
+<h3 align="center" style="color:grey;">Hier kun je sites van mijn vrienden zien met een uitleg vam wie ze zijn.</h3>
 </style>
 </style>
 <div class="school">
