--- a/vrienden.html
+++ b/vrienden.html
@@ -2,7 +2,7 @@
 <html>
    <head>
    <link rel="stylesheet" href=opmaak.css></link>
-<title>SanJ Hoofdpagina</title>
+<title>Sites van Vrienden</title>
    </head> 
    <link rel="icon" type="image/x-icon" href="favicon.ico">
 <body>
