--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <ul>
    <!--De code hieronder zorgt ervoor dat de navigatiebar aan de bovenkant kunt zien.-->
    <li><a align="right" href="page2.html">Over mij</a></li>
+   <li><a align="right" href="hobby.html">hobby's</a></li>
    <li><a align="right" href="vrienden.html">Vrienden</a></li>
    <li><a align="right" href="game.html">Binair Stelsel</a></li>
    <li><a align="right" href="Kleur.html">Kleurmoddelen</a></li>
