--- a/vrienden.html
+++ b/vrienden.html
@@ -4,7 +4,7 @@
    <link rel="stylesheet" href=opmaak.css></link>
 <title>Sites van Vrienden</title>
    </head> 
-   <link rel="icon" type="image/x-icon" href="favicon.ico">
+   <link rel="icon" type="image/x-icon" href="Logo2.png">
 <body>
 <ul>
    <!--De code hieronder zorgt ervoor dat de navigatiebar aan de bovenkant kunt zien.-->
