--- a/game.html
+++ b/game.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title style="color: rgb(255, 0, 0);">Binair stelsel</title>
 </head>
+<link rel="icon" type="image/x-icon" href="Logo2.png">
 <body>
 
 <link rel="stylesheet" href=opmaak.css></link>
