--- a/page2.html
+++ b/page2.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Mijn hobby's</title>
 </head>
+<link rel="icon" type="image/x-icon" href="Logo2.png">
 <body>
 <link rel="stylesheet" href=opmaak.css></link>
 <ul>
