--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
    </li>
  </ul>
 <h1 style="color: red;" align="center">SANJAY</h1>
-<h3 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Ik ben geboren in Leiderdorp. Mijn ouders komen allebei uit Sri Lanka. Op deze site leer je meer over mij.</h3>
+<h3 align="center" style="color:grey;"> Ik ben Sanjay Thambiaiah. Ik ben 15 jaar oud en zit op het Vlietland College. Op deze site leer je meer over mij.</h3>
 </style>
 </style>
 <div class="school">
