--- a/page2.html
+++ b/page2.html
@@ -25,7 +25,7 @@
  <div class="sport">
  <center>
  <div class="sport">
-    <h1 style="color: orange;">Ik ga in het weekend vaak naar de sportschool/gym, waar ik zoveel mogelijk train. Ik ben begonnen met trainen omdat ik overgewicht was en gepest werd. Nu doe ik het om sterker te worden.</h1>
+    <h1 style="color: orange;">Ik ben zelf geboren in Leiderdorp. Mijn ouders komen allebei uit Sri Lanka. Mijn moedertaal is Tamil. Omdat ik een Sri Lankaanse achternaam heb, vind ik het altijd grappig omt te kijken of docenten mijn achternaam(en soms zelfs mijn voornaam) goed uitspreken.</h1>
     <img class="img_deg" src="Sri_Lanka.png" alt="school" style="width:400px;height:300px;">
  </center>
  </div>
