--- a/vrienden.html
+++ b/vrienden.html
@@ -32,15 +32,27 @@
    <h1>
    <a style="color:  rgb(0, 51, 255);" href="https://flriis.github.io/">flriis</a>
    </h1>
-   <h2 style="color: blue;">Ik ken Floris al sinds de 1e. Ik ben goede vrienden men hem en zit bijna altijd naast hem. Soms is hij een beetje irritant maar meestal heb ik veel lol met hem</h2>
+   <h2 style="color: blue;">Ik ken Floris al sinds de 1e. Ik ben goede vrienden met hem en zit bijna altijd naast hem. Soms is hij een beetje irritant maar meestal heb ik veel lol met hem</h2>
    <br>
 </center>
 </div>
 
 </div>
+<div class="Dante">
+   <center>
+   <div class="Dante">
+      <h1>
+         <a style="color:red;" href="https://theprogrammerdr.github.io/">The programmerdr</a>
+      </h1>
+      <h2 style="color: red;">Ik ken Dante al sinds Havo 3. Ik ben vrienden met hem en praak vaak met hem. Soms is hij een beetje druk maar meestal niet.</h2>
+      <br>
+   </center>
+   </div>
+   
+   </div>
 <h2 style="color: red;">Ik zit nu (2024) in havo 4 met het profiel N&T. Ik heb veel nieuwe vrienden gemaakt die nu ook hun eigen sites hebben. hieronder vind je een link naar hun website. Nu alleen nog raden wie het zijn!
 
-<a style="color:  rgb(0, 51, 255);" href="https://theprogrammerdr.github.io/">The programmerdr</a>
+
 <a style="color:  rgb(0, 51, 255);" href="https://tctam.nl/">Tc_tam</a>
 <a style="color:  rgb(0, 51, 255);" href="https://tnobelen.github.io/">TNobelen</a>
 <a style="color: rgb(0, 51, 255);" href="https://th0mvn.github.io/">Th0mvnNobelen</a>
