--- a/vrienden.html
+++ b/vrienden.html
@@ -30,7 +30,7 @@
 <center>
 <div class="Floris">
    <h1>
-   <a style="color:  rgb(0, 51, 255);" href="https://flriis.github.io/">flriis</a>
+   <a style="color:  rgb(0, 51, 255);" href="https://flriis.github.io/">Floris</a>
    </h1>
    <h2 style="color: blue;">Ik ken Floris al sinds de 1e. Ik ben goede vrienden met hem en zit bijna altijd naast hem. Soms is hij een beetje irritant maar meestal heb ik veel lol met hem</h2>
    <br>
@@ -42,7 +42,7 @@
    <center>
    <div class="Dante">
       <h1>
-         <a style="color:red;" href="https://theprogrammerdr.github.io/">The programmerdr</a>
+         <a style="color:red;" href="https://theprogrammerdr.github.io/">Dante</a>
       </h1>
       <h2 style="color: red;">Ik ken Dante al sinds Havo 3. Ik ben vrienden met hem en praak vaak met hem. Soms is hij een beetje druk maar meestal niet.</h2>
       <br>
