--- a/vrienden.html
+++ b/vrienden.html
@@ -36,8 +36,8 @@
    <br>
 </center>
 </div>
-
 </div>
+
 <div class="Dante">
    <center>
    <div class="Dante">
@@ -48,12 +48,21 @@
       <br>
    </center>
    </div>
-   
    </div>
-<h2 style="color: red;">Ik zit nu (2024) in havo 4 met het profiel N&T. Ik heb veel nieuwe vrienden gemaakt die nu ook hun eigen sites hebben. hieronder vind je een link naar hun website. Nu alleen nog raden wie het zijn!
 
+   <div class="Tamer">
+   <center>
+   <div class="Tamer">
+   <h1>
+   <a style="color:green;" href="https://tctam.nl/">Tamer</a>
+   </h1>
+   <h2 style="color:green;">Ik ken Tamer al sinds Havo 3. Ik ben vrienden met hem en praat soms met hem. Meestal is hij een beetje druk maar some niet.</h2>
+   <br>
+   </center>
+   </div>
+      
+   </div>
 
-<a style="color:  rgb(0, 51, 255);" href="https://tctam.nl/">Tc_tam</a>
 <a style="color:  rgb(0, 51, 255);" href="https://tnobelen.github.io/">TNobelen</a>
 <a style="color: rgb(0, 51, 255);" href="https://th0mvn.github.io/">Th0mvnNobelen</a>
 </h2>
