--- a/vrienden.html
+++ b/vrienden.html
@@ -44,7 +44,7 @@
       <h1>
          <a style="color:red;" href="https://theprogrammerdr.github.io/">Dante Roerink</a>
       </h1>
-      <h2 style="color: red;">Ik ken Dante al sinds Havo 3. Ik ben vrienden met hem en praak vaak met hem. Soms is hij een beetje druk maar meestal niet.</h2>
+      <h2 style="color: red;">Ik ken Dante al sinds Havo 3. Ik ben vrienden met hem en praak vaak met hem. Soms is hij een beetje druk maar meestal niet. Hij is hele goede vrienden met Thom van Nobelen.</h2>
       <br>
    </center>
    </div>
@@ -56,7 +56,7 @@
    <h1>
    <a style="color:green;" href="https://tctam.nl/">Tamer Çevik</a>
    </h1>
-   <h2 style="color:green;">Ik ken Tamer al sinds Havo 3. Ik ben vrienden met hem en praat soms met hem. Meestal is hij een beetje druk maar some niet.</h2>
+   <h2 style="color:green;">Ik ken Tamer al sinds Havo 3. Ik ben vrienden met hem en praat soms met hem. Meestal is hij een beetje druk maar soms niet. Tamer zie je vaak met Thom en tim van Nobelen zitten.</h2>
    <br>
    </center>
    </div>
@@ -69,7 +69,7 @@
       <h1>
       <a style="color: rgb(0, 238, 255);" href="https://tnobelen.github.io/">Tim van Nobelen</a>
       </h1>
-      <h2 style="color:rgb(0, 238, 255);">Ik ken Tim van Nobelen pas dit jaar. Hij is best aardig en heeft mij ook geholpen met de border die je om de teksten ziet.</h2>
+      <h2 style="color:rgb(0, 238, 255);">Ik ken Tim van Nobelen pas dit jaar. Hij is best aardig en heeft mij ook geholpen met de border(randen) die je om de teksten en afbeeldingen ziet.</h2>
       <br>
       </center>
       </div>
@@ -82,7 +82,7 @@
       <h1>
       <a style="color: rgb(255, 255, 255);" href="https://th0mvn.github.io/">Thom van Nobelen</a>
       </h1>
-      <h2 style="color:rgb(255, 255, 255);">Ik ken Thom Nobelen ook pas dit jaar. Hij is ook aardig en is de tweelingbroer van Tim Nobelen.</h2>
+      <h2 style="color:rgb(255, 255, 255);">Ik ken Thom Nobelen ook pas dit jaar. Hij is ook aardig en is de tweelingbroer van Tim Nobelen. Hij is hele goede vrienden met Tamer en Dante en je ziet hem ook vaak naast hun zitten.</h2>
       <br>
       </center>
       </div>
